--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
     # Push the Docker image to Heroku Container Registry
     - name: Publish
       run: |
-        heroku container:push web -a $APP_NAME --arg MONGO_CLUSTER=$MONGO_CLUSTER, REDIS_URL=$REDIS_URL, HASH_ALGORITHM=$HASH_ALGORITHM, SECRET_KEY=$SECRET_KEY
+        heroku container:push web --app $APP_NAME --arg MONGO_CLUSTER=$MONGO_CLUSTER, REDIS_URL=$REDIS_URL, HASH_ALGORITHM=$HASH_ALGORITHM, SECRET_KEY=$SECRET_KEY
         heroku container:release web -a $APP_NAME
