--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
     # Push the Docker image to Heroku Container Registry
     - name: Publish
       run: |
-        heroku container:push web --arg MONGO_CLUSTER=$MONGO_CLUSTER --arg REDIS_URL=$REDIS_URL --arg HASH_ALGORITHM=$HASH_ALGORITHM --arg SECRET_KEY=$SECRET_KEY -a $APP_NAME
+        heroku container:push web -a $APP_NAME --arg MONGO_CLUSTER=$MONGO_CLUSTER --arg REDIS_URL=$REDIS_URL --arg HASH_ALGORITHM=$HASH_ALGORITHM --arg SECRET_KEY=$SECRET_KEY
         heroku container:release web -a $APP_NAME
