--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "nambot",
   "version": "1.0.0",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "browserify": "^17.0.0",
+    "dotenv": "^16.0.3",
+    "recorderjs": "^1.0.1"
   }
 }
