--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,14 +6,17 @@ on:
   pull_request:
     branches: [ master ]
 
-# Set environment variables
 env:
-  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   APP_NAME: ${{ 'lecnambot' }}
+  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
   MONGO_CLUSTER: ${{ secrets.MONGO_CLUSTER }}
   REDIS_URL: ${{ secrets.REDIS_URL }}
   HASH_ALGORITHM: ${{ secrets.HASH_ALGORITHM }}
   SECRET_KEY: ${{ secrets.SECRET_KEY }}
+  CNAMBOT_EMAIL: ${{ secrets.CNAMBOT_EMAIL }}
+  CNAMBOT_PASSWORD: ${{ secrets.CNAMBOT_PASSWORD }}
+  SESSION_TYPE: ${{ secrets.SESSION_TYPE }}
+  PERMANENT_SESSION_LIFETIME: ${{ secrets.PERMANENT_SESSION_LIFETIME }}
 
 jobs:
 
@@ -22,16 +25,24 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
 
-    # Clone the repository
-    - name: Checkout
-      uses: actions/checkout@v2
+      # Clone the repository
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    # Build Docker image
-    - name: Docker build
-      run: docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
+      # Build Docker image
+      - name: Docker build
+        run: docker login --username=_ --password=$HEROKU_API_KEY registry.heroku.com
 
-    # Push the Docker image to Heroku Container Registry
-    - name: Publish
-      run: |
-        heroku container:push web -a $APP_NAME --arg MONGO_CLUSTER=$MONGO_CLUSTER --arg REDIS_URL=$REDIS_URL --arg HASH_ALGORITHM=$HASH_ALGORITHM --arg SECRET_KEY=$SECRET_KEY
-        heroku container:release web -a $APP_NAME
+      # Push the Docker image to Heroku Container Registry
+      - name: Publish
+        run: |
+          heroku container:push web --app $APP_NAME 
+                                    --arg MONGO_CLUSTER=$MONGO_CLUSTER 
+                                    --arg REDIS_URL=$REDIS_URL 
+                                    --arg HASH_ALGORITHM=$HASH_ALGORITHM 
+                                    --arg SECRET_KEY=$SECRET_KEY 
+                                    --arg CNAMBOT_EMAIL=$CNAMBOT_EMAIL
+                                    --arg CNAMBOT_PASSWORD=$CNAMBOT_PASSWORD
+                                    --arg SESSION_TYPE=$SESSION_TYPE
+                                    --arg PERMANENT_SESSION_LIFETIME=$PERMANENT_SESSION_LIFETIME
+          heroku container:release web --app $APP_NAME
