--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,18 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+  APP_NAME: ${{ 'lecnambot' }}
+  HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+#  MONGO_CLUSTER: ${{ secrets.MONGO_CLUSTER }}
+#  REDIS_URL: ${{ secrets.REDIS_URL }}
+#  HASH_ALGORITHM: ${{ secrets.HASH_ALGORITHM }}
+#  SECRET_KEY: ${{ secrets.SECRET_KEY }}
+#  CNAMBOT_EMAIL: ${{ secrets.CNAMBOT_EMAIL }}
+#  CNAMBOT_PASSWORD: ${{ secrets.CNAMBOT_PASSWORD }}
+#  SESSION_TYPE: ${{ secrets.SESSION_TYPE }}
+#  PERMANENT_SESSION_LIFETIME: ${{ secrets.PERMANENT_SESSION_LIFETIME }}
+
 jobs:
 
   deploy:
@@ -24,5 +36,5 @@ jobs:
       # Push the Docker image to Heroku Container Registry
       - name: Publish
         run: |
-          heroku container:push web --app lecnambot
-          heroku container:release web --app lecnambot
+          heroku container:push web --app $APP_NAME
+          heroku container:release web --app $APP_NAME
