--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,3 +29,6 @@ jobs:
         run: |
           heroku container:push web --app $APP_NAME
           heroku container:release web --app $APP_NAME
+
+      - name: Run
+        web: gunicorn app:app 0.0.0.0:$PORT
