--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
           heroku container:release web --app $APP_NAME
 
       - name: Run
-        web: gunicorn app:app 0.0.0.0:$PORT
+        run: gunicorn app:app 0.0.0.0:$PORT
